# importfolio

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  data_loader.py  docker-compose.yml  optimizer.py  prd.md  pyproject.toml  render.yaml  requirements.txt  tests.md
static/: chart.min.js  style.css
templates/: index.html
tests/: test_app.py  test_data_loader.py  test_optimizer.py
tmp/: 401c401f-325e-49a1-ae1e-cefa869d7193.json  5513f806-f466-42a2-844d-672136a5f2bd.json  6f856044-0cdc-4804-8e8d-9c3bf86173b0.json  ad94d049-13d0-435f-a1da-5cefafb28cd0.json  eec547cf-475f-4665-9965-39e5b3cb2280.json
